--- a/K_fold.ipynb
+++ b/K_fold.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7Prom5VGl+WGAgtJb7qtR",
+      "authorship_tag": "ABX9TyOgCmF7WspTbNMIOpI1IqsG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,13 +23,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Sahel-Eskandar/ML-Calibration/blob/main/K_fold.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Sahel-Eskandar/ML-Evaluation-Calibration/blob/main/K_fold.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#1st"
+        "#[1st Medium Article](https://link.medium.com/I2Zal6Ocuyb)"
       ],
       "metadata": {
         "id": "XFU9Z0r32CbQ"
@@ -219,7 +219,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#2nd"
+        "#[2nd Medium Article](https://medium.com/@eskandar.sahel/evaluating-machine-learning-models-a-guide-to-selecting-the-right-performance-assessment-method-a8f61ace557a)"
       ],
       "metadata": {
         "id": "tkOiz1c31-Lq"
