--- a/K_fold.ipynb
+++ b/K_fold.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgCmF7WspTbNMIOpI1IqsG",
+      "authorship_tag": "ABX9TyP4wK+tSwoAH7vDDfoYzbal",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#[1st Medium Article](https://link.medium.com/I2Zal6Ocuyb)"
+        "#[1st Medium Article](https://medium.com/@eskandar.sahel/comparing-k-fold-cross-validation-methods-strategies-for-effective-model-evaluation-in-diverse-2300b850df3e)"
       ],
       "metadata": {
         "id": "XFU9Z0r32CbQ"
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "4L7lKKPf2BR0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "id": "6mcM0ofd26gB",
         "outputId": "77e0aee6-ca88-4835-9df5-d4be01c3e530"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
         "id": "R7V2pOeW20ac",
         "outputId": "e6b15780-9d98-4a63-b1fd-65c6d7e076fc"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
         "id": "v1yq7I7S2whv",
         "outputId": "c721ff0f-3110-40c5-c9b2-592ce3f7c294"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +205,7 @@
         "id": "D-9fnjHL2voO",
         "outputId": "07154742-4b98-4598-ca7f-32037dbf56dc"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "FK7bQE3w1TwY"
       },
@@ -264,7 +264,7 @@
         "id": "nGgbJZi0Bh7Q",
         "outputId": "e2f7ff79-0123-4c65-a129-5683548d060d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
         "id": "byYvN_bNBlN5",
         "outputId": "475b1559-6ad9-47c3-c662-3c9d71997610"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +316,7 @@
         "id": "LtmgUoVSBni2",
         "outputId": "2670f34a-b4f4-4063-ed75-b23c682b9a1e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +342,7 @@
         "id": "u5ihmSvIBnme",
         "outputId": "12363a3a-fbce-44e2-ab20-c6a244de0c1f"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +368,7 @@
         "id": "DIa0GQ7YBnx9",
         "outputId": "eb319126-3db3-4d25-87d5-cb044c891209"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +410,7 @@
         "id": "zwxJXQkC1aR2",
         "outputId": "fa54abac-9958-4628-c9b6-33ea0ee5cf32"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
